--- a/single-portfolio.html
+++ b/single-portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Boxus - Html Responsive One Page Template</title>
+        <title>@UNCeship Strategy</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Template by Colorlib" />
         <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
@@ -17,6 +17,8 @@
         <link rel="stylesheet" type="text/css"  href='css/prettyPhoto.css' />
         <link rel="stylesheet" type="text/css"  href='css/sm-clean.css' />
         <link rel="stylesheet" type="text/css"  href='style.css' />
+        <link rel='stylesheet' media='screen and (max-width: 1190px)' href='style-mobile.css' />
+
 
         <!--[if lt IE 9]>
                 <script src="js/html5.js"></script>
@@ -40,13 +42,13 @@
                 <div class="mob-menu">MENU</div>
                 <ul class="main-menu sm sm-clean">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Services</a></li>
+                    <!-- <li><a href="#services">Services</a></li> -->
+                    <li><a href="#aboutMe">About</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#news">News</a></li>
+                    <!-- <li><a href="#news">News</a></li>
                     <li><a href="#video">Video</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#skills">Skills</a></li> -->
+                    <!-- <li><a href="#contact">Contact</a></li> -->
                 </ul>
             </nav>
         </div>
@@ -113,14 +115,14 @@
                 <div class="footer content-1170 center-relative">
                     <ul>
                         <li class="copyright-footer">
-                            © 2018 All rights reserved. | Boxus Template by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                            © Boxus Template by <a href="https://colorlib.com" target="_blank">Colorlib</a> | Modified by Jack W. Molloy
                         </li>
                         <li class="social-footer">
-                            <a href="#"><span class="fa fa-twitter"></span></a>
-                            <a href="#"><span class="fa fa-behance"></span></a>
-                            <a href="#"><span class="fa fa-dribbble"></span></a>
-                            <a href="#"><span class="fa fa-facebook"></span></a>
-                            <a href="#"><span class="fa fa-rss"></span></a>
+                          <a href="https://www.linkedin.com/in/jackwmolloy/" target="_blank"><span class="fa fa-linkedin"></span></a>
+                          <a href="https://www.facebook.com/jackwmolloy" target="_blank"><span class="fa fa-facebook"></span></a>
+                          <a href="https://twitter.com/YaBoyMolloy" target="_blank"><span class="fa fa-twitter"></span></a>
+                          <a href="https://medium.com/@jackwmolloy" target="_blank"><span class="fa fa-medium"></span></a>
+                      </li>
                         </li>
                     </ul>
                 </div>
