--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en-US">
     <head>
-        <title>Jack Molloy Design</title>
+        <title>J A C K</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="description" content="Template by Colorlib" />
         <meta name="keywords" content="HTML, CSS, JavaScript, PHP" />
@@ -569,7 +569,7 @@
             <div class="footer content-1170 center-relative">
                 <ul>
                     <li class="copyright-footer">
-                        © 2018 All rights reserved. | Boxus Template by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                        © Boxus Template by <a href="https://colorlib.com" target="_blank">Colorlib</a> | Modified by Jack W. Molloy
                     </li>
                     <li class="social-footer">
                       <a href="https://www.linkedin.com/in/jackwmolloy/" target="_blank"><span class="fa fa-linkedin"></span></a>
